...
        
        self.activityIndicator.isHidden = true
        
        // Configure SearchBar for the NavigationItem
        let searchBar = UISearchBar()
        searchBar.delegate = self
        searchBar.placeholder = "Search for a game..."
        searchBar.showsScopeBar = true
        searchBar.returnKeyType = .search
        self.navigationItem.titleView = searchBar
        
    }
    
...
