...
                            <constraint firstItem="2kq-Pl-Rd2" firstAttribute="top" secondItem="ZFf-qK-McD" secondAttribute="top" id="XoK-no-8KY"/>
                            <constraint firstItem="2kq-Pl-Rd2" firstAttribute="leading" secondItem="ZFf-qK-McD" secondAttribute="leading" id="lSO-tC-aeS"/>
                            <constraint firstItem="jsQ-lb-u9f" firstAttribute="centerY" secondItem="ZFf-qK-McD" secondAttribute="centerY" id="vnh-oy-fLz"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ZFf-qK-McD"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add games" id="9m1-qo-2OR"/>
                    <connections>
                        <outlet property="activityIndicator" destination="jsQ-lb-u9f" id="8OZ-zg-h7z"/>
                        <outlet property="searchDisplayController" destination="kfE-gh-m3J" id="way-nA-k8C"/>
                        <outlet property="tableView" destination="2kq-Pl-Rd2" id="AVt-gK-tNr"/>
                    </connections>
                </viewController>
...
